# TP7_MEDEV

./: .gitignore  CMakeLists.txt  DCT_converter.cpp  DCT_converter.h  DTC_converter.cpp  DTC_converter.h  README.md  compile.bat  tests[1]_include.cmake
JPEG/: CMakeLists.txt  JPEG.cpp
src/: DCT_converter.cpp  DCT_converter.h  Huffmann.cpp  JPEG.cpp  JPEG.h  RLCDecompression.cpp  RLCDecompression.h  compression_rlc.cpp  compression_rlc.h  huff_tree.h  quantification.cpp  quantification.h
tests/: compression.cc  hello_test.cc  huff_tree_test.cc  huffmann_compression_test.cc  tests.cpp  testsDCT.cc  tests_quantif.cc
